--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js" crossorigin></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <script
+      src="https://unpkg.com/@babel/standalone/babel.min.js"
+      crossorigin
+    ></script>
 
     <title>Online Banking</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1 class="display-4">Online Banking</h1>
+
     <!-- You will put your React component inside this div. -->
-    <div id="root"></div>
+    <div id="root" class="d-flex justify-content-center container"></div>
 
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script
+      src="https://unpkg.com/react@17/umd/react.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
+      crossorigin
+    ></script>
 
     <!-- Load our React component. -->
     <script type="text/jsx" src="./atm-improvements.jsx"></script>
-</body>
-
+  </body>
 </html>
